fixed the wrap in navbar

--- a/amazon-clone/client/src/Components/NavBar.css
+++ b/amazon-clone/client/src/Components/NavBar.css
@@ -75,9 +75,11 @@
 }
 .NavBarOptionOne {
   font-size: .8rem;
+  white-space: nowrap;
 }
 .NavBarOptionTwo {
   font-size: .9rem;
+  white-space: nowrap;
   font-weight: 800;
 }
 .NavBarOptionBasket {
